<resources>
    <string name="app_name">MoviesDB</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="popular">Popular Movies</string>
    <string name="view_all">View All</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="upcoming_movies_description">Stay updated with the latest movies</string>

    <string name="popular_series">Popular TV Series</string>
    <string name="most_popular_series">Most Popular TV Series</string>
    <string name="top_rated_series">Top Rated TV Series</string>
    <string name="on_air_series">On Air TV Series</string>
    <string name="top_rated_series_description">Highest rated series of all time</string>
    <string name="on_air_series_description">Shows that are currently on air</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- App -->
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation drawer items -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_item_explore">Explore</string>
    <string name="navigation_item_favorites">Favorites</string>
    <string name="navigation_item_tv">TV Series</string>


    <!-- Actions (menu items, buttons, etc.) and common strings -->
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort by…</string>
    <string name="action_search">Search for a movie</string>
    <string name="action_cancel">Cancel</string>

    <!-- Movies grid screen -->
    <string name="movies_grid_no_movies">No movies</string>

    <!-- Movie detail screen -->
    <string name="movie_detail_release_date">Release date: %s</string>
    <string name="movie_detail_overview_title">Overview</string>
    <string name="movie_detail_videos_title">Videos</string>
    <string name="movie_detail_reviews_title">Reviews</string>

    <!-- Sort dialog -->
    <string name="sort_dialog_title">Sort by</string>
    <string name="sort_dialog_most_popular">Most popular</string>
    <string name="sort_dialog_top_rated">Top rated</string>
    <string name="sort_dialog_most_rated">Most Rated</string>

    <!-- Content description -->
    <string name="content_description_movie_poster">Movie poster image</string>
    <string name="content_description_movie_backdrop">Movie backdrop image</string>
    <string name="content_description_movie_video">Movie video thumbnail</string>
    <string name="content_description_no_movies_icon">No movies icon</string>

    <!-- Regular information messages -->
    <string name="message_added_to_favorites">Added to favorites</string>
    <string name="message_removed_from_favorites">Removed from favorites</string>

    <!-- Favorites grid screen -->
    <string name="favorites_grid_title">Favorites</string>

    <!-- Movie Detail Activity -->
    <string name="title_activity_movie_detail">MovieDetailActivity</string>

    <!-- Error messages -->
    <string name="error_failed_to_update_movies">Failed to update movies</string>
    <string name="logo">Logo</string>
    <string name="connect_to_tmdb">Connect to TMDb</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Sign in</string>
    <string name="navigation_item_signout">Sign Out</string>

    <string name="small_text">"Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="overview">Overview</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>

</resources>
