<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.android.moviedb.ui.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.android.moviedb.ui.DetailFragment"
        android:label="@string/app_name">
        <argument
            android:name="selectedMovie"
            app:argType="com.android.moviedb.network.Movie" />
    </fragment>
    <fragment
        android:id="@+id/drawer_item_favorites"
        android:name="com.android.moviedb.ui.FavouritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/action_about_overflow"
        android:name="com.android.moviedb.ui.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/action_settings_overflow"
        android:name="com.android.moviedb.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>