<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.moviedb.ui.DetailViewModel" />
    </data>


    <!--    <androidx.constraintlayout.motion.widget.MotionLayout-->
    <!--        android:id="@+id/details_motion"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layoutDescription="@xml/detail_fragment_motion_scene">-->

    <!--        &lt;!&ndash; This needs to be updated to use WindowInsets. See https://issuetracker.google.com/issues/112605433 &ndash;&gt;-->
    <!--        <Space-->
    <!--            android:id="@+id/details_status_bar_anchor"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="26dp" />-->

    <!--        &lt;!&ndash; This view is here to allow the poster to overlap the RV. &ndash;&gt;-->
    <!--        <Space-->
    <!--            android:id="@+id/details_poster_anchor"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="320dp" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/details_backdrop"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:background="@android:color/black"-->
    <!--            android:scaleType="centerCrop"-->
    <!--            android:src="@drawable/sample_poster" />-->


    <!--        <androidx.cardview.widget.CardView-->
    <!--            android:id="@+id/details_poster"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:background="@drawable/sample_poster"-->
    <!--            android:transitionName="poster"-->
    <!--            app:cardCornerRadius="5dp"-->
    <!--            app:cardElevation="0.7dp"-->
    <!--            app:cardMaxElevation="1dp"-->
    <!--            app:cardPreventCornerOverlap="true"-->
    <!--            app:cardUseCompatPadding="true">-->

    <!--            <ImageView-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:adjustViewBounds="true"-->
    <!--                android:background="@drawable/sample_poster"-->
    <!--                android:scaleType="centerCrop" />-->

    <!--        </androidx.cardview.widget.CardView>-->

    <!--        <TextView-->
    <!--            android:id="@+id/details_title"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:ellipsize="end"-->
    <!--            android:text="@{String.valueOf(viewModel.movieVideos.id)}"-->
    <!--            android:textAppearance="?attr/textAppearanceHeadline6"-->
    <!--            android:textSize="24sp" />-->

    <!--        &lt;!&ndash; The text color is set to an opaque color for Emoji.-->
    <!--             The caption text appearance is set via spans. &ndash;&gt;-->
    <!--        <TextView-->
    <!--            android:id="@+id/details_subtitle"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:ellipsize="end"-->
    <!--            android:text="@{String.valueOf(viewModel.movieReviews.id)}"-->
    <!--            android:textAppearance="?attr/textAppearanceCaption"-->
    <!--            android:textColor="#000000"-->
    <!--            android:textSize="18sp" />-->

    <!--        <androidx.appcompat.widget.Toolbar-->
    <!--            android:id="@+id/details_toolbar"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/details_status_bar_anchor"-->
    <!--            app:navigationIcon="?attr/homeAsUpIndicator" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/details_rv"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:background="?android:colorBackground"-->
    <!--            android:elevation="1dp"-->
    <!--            android:text="@{String.valueOf(viewModel.movieVideos.id)}"-->
    <!--            android:textSize="24sp" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/movie_reviews"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:background="?android:colorBackground"-->
    <!--            android:elevation="1dp"-->
    <!--            android:text="@{String.valueOf(viewModel.movieReviews.id)}"-->
    <!--            android:textSize="24sp"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/details_rv" />-->

    <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--            android:id="@+id/favourite_fab"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginEnd="16dp"-->
    <!--            android:scaleType="centerInside"-->
    <!--            android:src="@drawable/ic_favorite_white_border"-->

    <!--            />-->

    <!--    </androidx.constraintlayout.motion.widget.MotionLayout>-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Overview -->

            <androidx.cardview.widget.CardView
                android:id="@+id/movie_overview_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/text_movie_overview_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_overview_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_movie_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_movie_overview_title"
                        android:maxLines="4"
                        android:paddingTop="@dimen/spacing_small"
                        android:text="@{String.valueOf(viewModel.selectedMovie.overview)}"
                        tools:text="A plot synopsis (called overview in the api)" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <!-- Videos -->

            <androidx.cardview.widget.CardView
                android:id="@+id/movie_videos_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_overview_card">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/text_movie_video_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_videos_title"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movie_videos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/spacing_small"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:listVideos="@{viewModel.movieVideos}" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <!-- Reviews -->

            <androidx.cardview.widget.CardView
                android:id="@+id/movie_reviews_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_videos_card">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/text_movie_review_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_reviews_title"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movie_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/spacing_medium"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:listReviews="@{viewModel.movieReviews}" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>